--- a/Cloudsdale-WP7.csproj
+++ b/Cloudsdale-WP7.csproj
@@ -128,6 +128,7 @@
       <DependentUpon>Connecting.xaml</DependentUpon>
     </Compile>
     <Compile Include="Connection.cs" />
+    <Compile Include="Controls\AlternatableContent.cs" />
     <Compile Include="Controls\CloudTileManager.xaml.cs">
       <DependentUpon>CloudTileManager.xaml</DependentUpon>
     </Compile>
