--- a/Cloudsdale-WP7.csproj
+++ b/Cloudsdale-WP7.csproj
@@ -160,6 +160,9 @@
     <Compile Include="Controls\StatusColorConverter.cs" />
     <Compile Include="Controls\TiltEffect.cs" />
     <Compile Include="Controls\TiltGrid.cs" />
+    <Compile Include="CreateCloud.xaml.cs">
+      <DependentUpon>CreateCloud.xaml</DependentUpon>
+    </Compile>
     <Compile Include="DropViewer.xaml.cs">
       <DependentUpon>DropViewer.xaml</DependentUpon>
     </Compile>
@@ -271,6 +274,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Controls\LinkDetectingTextBlock.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="CreateCloud.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
