--- a/Cloudsdale-WP8.csproj
+++ b/Cloudsdale-WP8.csproj
@@ -400,6 +400,7 @@
     <Content Include="Images\appbar.send.text.rest.png" />
     <Content Include="Images\basecircle.png" />
     <Content Include="Images\appbar.info.rest.png" />
+    <Content Include="Images\appbar.microphone.png" />
     <Content Include="Images\Icons\delete.png" />
     <Content Include="Images\Icons\send.png" />
     <Content Include="Images\Icons\back.png" />
