--- a/Cloudsdale-WP8.csproj
+++ b/Cloudsdale-WP8.csproj
@@ -248,6 +248,9 @@
     <Compile Include="Models\Prosecution.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserReference.cs" />
+    <Compile Include="NFC\Share.xaml.cs">
+      <DependentUpon>Share.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -347,6 +350,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="NFC\Share.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Screenshot\UploadResult.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -405,6 +412,7 @@
     <Content Include="Images\Icons\send.png" />
     <Content Include="Images\Icons\back.png" />
     <Content Include="Images\appbar.minus.rest.png" />
+    <Content Include="Images\nfc-tap-and-send.png" />
     <Content Include="ReadMe.Coding4Fun.Toolkit.txt" />
     <Content Include="Sound\harlem-shake.mp3" />
     <Content Include="Todo.txt" />
