--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Coding4Fun.Toolkit.Controls" version="2.0.5" targetFramework="wp71" />
+  <package id="NdefLibrary" version="1.0.0.0" targetFramework="wp80" />
 </packages>
